--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "next": "10.0.7",
+    "next-auth": "^3.7.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
