--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7",
-    "morgan": "^1.10.0"
+    "axios": "^0.21.1",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.7"
   }
 }
