--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "mysql": "^2.18.1",
+    "mongodb": "^3.6.4",
     "next": "10.0.7",
     "next-auth": "^3.7.0",
     "react": "17.0.1",
