--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "mongodb": "^3.6.4",
     "next": "10.0.7",
+    "next-auth": "^3.7.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.1.25",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "typescript": "^4.2.2"
