--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,13 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "chalk": "^2.4.2",
     "next": "10.0.7",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "supports-color": "^5.5.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "react": "^17.0.1",
     "typescript": "^4.2.2"
   }
 }
