--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "next": "10.0.7",
     "next-auth": "^3.7.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-chartjs-2": "^2.11.1",
+    "react-dom": "17.0.1",
+    "react-loader-spinner": "^4.0.0"
   },
   "devDependencies": {
     "@types/next-auth": "^3.1.25",
