--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "chalk": "^2.4.2",
     "next": "10.0.7",
     "react-dom": "17.0.1",
-    "supports-color": "^5.5.0"
+    "supports-color": "^5.5.0",
     "mongodb": "^3.6.4",
     "next": "10.0.7",
     "axios": "^0.21.1",
