--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-rate-limit": "^5.2.6"
   },
   "devDependencies": {
     "axios": "^0.21.1",
