--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-rate-limit": "^5.2.6"
+    "express-rate-limit": "^5.2.6",
+    "mongodb": "^3.6.3",
+    "mongoose": "^5.11.15"
   },
   "devDependencies": {
     "axios": "^0.21.1",
