--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-chartjs-2": "^2.11.1",
     "react-dom": "17.0.1",
     "react-loader-spinner": "^4.0.0",
+    "react-notifications": "^1.7.2",
     "supports-color": "^5.5.0"
   },
   "devDependencies": {
